# notebooks

./: LICENSE  README.md  pyproject.toml  requirements.txt  scripts.py
notebooks/: c-stac-api-search.ipynb  c-stac-api.ipynb  cis-ice-charts.ipynb  download-from-aws-s3.ipynb  example-geotiff-png.ipynb  fsharp-exceptions.ipynb  gulf-of-mexico-satellite-coverage.ipynb  parse-real-time-hydrometric-data.ipynb  rcm-summary-canada-eez.ipynb  rcm-summary-duration.ipynb  rcm-summary.ipynb  sentinel-1-acquisitions.ipynb  sentinel-1-acquisitions.txt
tests/: test_notebooks.py
