[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["jthetzel <jthetzel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.1.18"
httpx = "^0.22.0"
geopandas = "^0.10.1"
matplotlib = "^3.4.3"
mapboxgl = "^0.10.2"
requests = "^2.26.0"
ipyleaflet = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
freeze = "scripts:freeze"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
